// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct markup with location prop 1`] = `
<ul
  className="NASA1975-article-author "
>
  <li>
    Test author name
  </li>
  <li>
    Goddard Space Flight Center
  </li>
  
</ul>
`;

exports[`renders correct markup with multiple props 1`] = `
<ul
  className="NASA1975-article-author "
>
  <li>
    Test author name
  </li>
  <li>
    Goddard Space Flight Center
  </li>
  <li>
    (Phone: 
    301/725-1234
    )
  </li>
</ul>
`;

exports[`renders correct markup with no optional props 1`] = `
<ul
  className="NASA1975-article-author "
>
  <li>
    Test author name
  </li>
  
  
</ul>
`;

exports[`renders correct markup with phone prop 1`] = `
<ul
  className="NASA1975-article-author "
>
  <li>
    Test author name
  </li>
  
  <li>
    (Phone: 
    301/725-1234
    )
  </li>
</ul>
`;
